[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/characters/main/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/kenney_prototypes/assets/colors/dark/textures/texture_02.png" type="Texture" id=2]
[ext_resource path="res://scenes/gui/character_select/CharacterSelect3D.gd" type="Script" id=3]

[sub_resource type="ProceduralSky" id=3]

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 3 )
ambient_light_color = Color( 0.5, 0.5, 0.5, 1 )
ambient_light_sky_contribution = 0.5
tonemap_mode = 2
tonemap_white = 16.0
adjustment_enabled = true
adjustment_brightness = 1.1
adjustment_contrast = 1.1
adjustment_saturation = 1.1

[sub_resource type="ArrayMesh" id=5]
resource_name = "cube_Cube001"
surfaces/0 = {
"aabb": AABB( 0, 0, 0, 2, 2, 2.00001 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 64, 0, 60, 1, 128, 0, 0, 0, 0, 255, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 64, 0, 60, 0, 0, 1, 128, 255, 127, 255, 127, 0, 0, 128, 179, 0, 0, 128, 63, 0, 0, 0, 0, 0, 64, 0, 60, 0, 0, 0, 0, 255, 127, 255, 63, 0, 0, 128, 179, 0, 0, 128, 63, 0, 0, 0, 64, 0, 64, 0, 60, 1, 128, 0, 0, 0, 0, 255, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 64, 0, 64, 0, 60, 0, 0, 0, 0, 255, 127, 255, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 0, 64, 0, 60, 0, 0, 255, 127, 255, 127, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 60, 1, 128, 0, 0, 0, 0, 255, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 60, 0, 0, 1, 128, 255, 127, 255, 127, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 60, 255, 127, 255, 127, 1, 128, 255, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 0, 60, 1, 128, 0, 0, 0, 0, 255, 63, 0, 0, 128, 179, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 0, 60, 255, 127, 255, 127, 1, 128, 255, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 0, 60, 0, 0, 255, 127, 255, 127, 255, 127, 0, 0, 128, 63, 0, 0, 0, 0, 0, 64, 0, 0, 0, 64, 0, 60, 0, 0, 1, 128, 255, 127, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 0, 64, 0, 60, 0, 0, 0, 0, 255, 127, 255, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 64, 0, 0, 0, 64, 0, 60, 255, 127, 0, 0, 255, 127, 255, 127, 0, 0, 128, 179, 0, 0, 128, 63, 0, 64, 0, 64, 0, 64, 0, 60, 0, 0, 0, 0, 255, 127, 255, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 64, 0, 64, 0, 64, 0, 60, 0, 0, 255, 127, 255, 127, 255, 127, 0, 0, 128, 179, 0, 0, 128, 63, 0, 64, 0, 64, 0, 64, 0, 60, 255, 127, 0, 0, 255, 127, 255, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 0, 0, 0, 60, 0, 0, 1, 128, 255, 127, 255, 127, 0, 0, 128, 63, 0, 0, 0, 0, 0, 64, 0, 0, 0, 0, 0, 60, 255, 127, 255, 127, 1, 128, 255, 63, 0, 0, 128, 179, 0, 0, 128, 63, 0, 64, 0, 0, 0, 0, 0, 60, 255, 127, 0, 0, 255, 127, 255, 127, 0, 0, 128, 63, 0, 0, 128, 63, 0, 64, 0, 64, 0, 0, 0, 60, 255, 127, 255, 127, 1, 128, 255, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 0, 64, 0, 0, 0, 60, 0, 0, 255, 127, 255, 127, 255, 127, 0, 0, 128, 63, 0, 0, 128, 63, 0, 64, 0, 64, 0, 0, 0, 60, 255, 127, 0, 0, 255, 127, 255, 127, 0, 0, 128, 63, 0, 0, 0, 0 ),
"array_index_data": PoolByteArray( 0, 0, 9, 0, 3, 0, 0, 0, 6, 0, 9, 0, 8, 0, 21, 0, 10, 0, 8, 0, 19, 0, 21, 0, 20, 0, 17, 0, 23, 0, 20, 0, 14, 0, 17, 0, 13, 0, 4, 0, 15, 0, 13, 0, 2, 0, 4, 0, 7, 0, 12, 0, 18, 0, 7, 0, 1, 0, 12, 0, 22, 0, 5, 0, 11, 0, 22, 0, 16, 0, 5, 0 ),
"blend_shape_data": [  ],
"format": 2097943,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="SpatialMaterial" id=6]
flags_world_triplanar = true
albedo_texture = ExtResource( 2 )
roughness = 0.5
uv1_scale = Vector3( 0.125, 0.125, 0.125 )
uv1_triplanar = true

[sub_resource type="BoxShape" id=7]

[node name="CharacterSelect3D" type="Spatial"]
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.707107, 0.707107, 0, -0.707107, -0.707107, 0, 10, 0 )
shadow_enabled = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 10, 21 )
fov = 30.0

[node name="Floor" type="StaticBody" parent="." groups=["navmesh"]]
transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 20, 0, -0.2, 0 )
collision_layer = 5

[node name="Cube" type="MeshInstance" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, -1, 0, -1 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0.1, 0 )
shape = SubResource( 7 )

[node name="Character1" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -6, 0, 0 )
visible = false

[node name="Character2" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -2, 0, 0 )
visible = false

[node name="Character3" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 2, 0, 0 )
visible = false

[node name="Character4" parent="." instance=ExtResource( 1 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 6, 0, 0 )
visible = false
